# backend_vegastack_social_media

./: .env  pyproject.toml
custom_auth/: models.py  serializers.py  urls.py  views.py
custom_auth/migrations/: 0001_initial.py
follows/: models.py  serializers.py  urls.py  views.py
follows/migrations/: 0001_initial.py
interaction/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
interaction/migrations/: 0001_initial.py
posts/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
posts/migrations/: 0001_initial.py
socialconnect/: settings.py  urls.py
users/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
